# wireguard-dynamic-remote

./: .gitignore  LICENSE  README.md  debug.py  install.py  pyproject.toml
scripts/: fix-permission.ps1
wireguard_dynamic_remote/: binary.py  service.py
wireguard_dynamic_remote/common/: context.py  logger.py  networking.py  spawn.py
wireguard_dynamic_remote/daemon/: __init__.py  main.py  resolve.py  service_control.py
wireguard_dynamic_remote/systemd/: control.py  sd_notify.py  systemctl.py  tools.py
wireguard_dynamic_remote/wireguard/: __init__.py  config_parser.py  type.py
