[tool.poetry]
name = "wireguard-dynamic-remote"
version = "0.1.0"
description = "Watchdog service for Wireguard remote with hostname."
authors = ["GongT <admin@gongt.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sdnotify = { version = "^0.3.2", platform = "linux" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wireguard_dynamic_remote = "wireguard_dynamic_remote.binary:main"
